# rp2040-doom-ili9341

./: README.md
hardaware/: readme.md
software/: CMakeLists.txt  prebuilt_tools.cmake  readme.md
software/src/: CMakeLists.txt  i_main.c  i_video.h  m_controls.c
software/src/pico/: CMakeLists.txt  i_input.c  i_picosound.c  i_video.c  magc.h  piconet.c  video_doom.pio
uf2/: README.md  doom_tiny.uf2  doom_tiny_ILI9341.uf2  doom_tiny_ILI9341_sound_fix.uf2  doom_tiny_ST7789.uf2
